--- a/src/components/Nav/NavItems/NavItem/NavItem.css
+++ b/src/components/Nav/NavItems/NavItem/NavItem.css
@@ -23,6 +23,12 @@
     align-items: center;
   }
 
+  @media (max-width: 499px) {
+    .NavItem {
+      display: none;
+    }
+  }
+
   .NavItem a {
     color: white;
     height: 100%;
