--- a/src/containers/Hotels/Hotels.css
+++ b/src/containers/Hotels/Hotels.css
@@ -4,6 +4,5 @@
   border-top: 1px solid rebeccapurple;
   border-bottom: 1px solid rebeccapurple;
   box-sizing: border-box;
-  padding: 0 20px;
-  margin: auto 20px;
+  margin-right: 20px;
 }
