--- a/src/containers/SideBar/sidebar.css
+++ b/src/containers/SideBar/sidebar.css
@@ -1,14 +1,14 @@
 .SideBar {
-  position: relative;
-  width: 280px;
-  max-width: 70%;
+  display: flex;
+  flex-direction: column;
+  overflow: scroll;
+  width: 450px;
+  max-width: 100%;
   height: 100%;
-  left: 0;
-  top: 0;
-  z-index: 80;
   background-color: rebeccapurple;
   padding: 32px 16px;
   box-sizing: border-box;
+  margin-top: 16px;
   color: white;
 }
 
