add font and reduce title size

--- a/src/components/Title/title.css
+++ b/src/components/Title/title.css
@@ -1,9 +1,10 @@
 .Title {
   text-align: center;
-  font-size: 1.7rem;
+  font-size: 1.4rem;
   height: 100%;
   padding: 0;
   margin: auto;
+  letter-spacing: 0.5px;
 }
 
 .Title h2 {
