--- a/src/components/Hotel/Hotel.css
+++ b/src/components/Hotel/Hotel.css
@@ -53,3 +53,23 @@
   width: 75%;
   border: 1px solid black;
 }
+
+.Facilities {
+  width: 20%;
+  border-right: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Hotel ul {
+  position: relative;
+  list-style-type: none;
+  display: flex;
+  padding: 0 5px;
+  margin: 0 0;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 50%;
+  flex-wrap: wrap;
+}
