--- a/src/components/Hotel/Hotel.css
+++ b/src/components/Hotel/Hotel.css
@@ -1,7 +1,8 @@
 .Hotel {
   display: flex;
   flex-direction: row;
-  border: 1px solid black;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
   box-sizing: border-box;
   box-shadow: 1px 1px 1px black;
   flex-wrap: wrap;
@@ -14,6 +15,8 @@
   font-weight: bold;
   font-size: 1.2rem;
   list-style-type: none;
+  background: white;
+  border-radius: 25px;
 }
 
 .HotelCard {
@@ -24,7 +27,7 @@
   background-color: rebeccapurple;
   color: white;
   width: 25%;
-  border-right: 1px solid black;
+  border-radius: 25px;
 }
 
 .Price {
