--- a/src/containers/SideBar/sidebar.css
+++ b/src/containers/SideBar/sidebar.css
@@ -2,14 +2,17 @@
   display: flex;
   flex-direction: column;
   overflow: scroll;
-  width: 450px;
+  align-items: center;
+  width: 650px;
   max-width: 100%;
   height: 100%;
-  background-color: rebeccapurple;
   padding: 32px 16px;
   box-sizing: border-box;
   margin-top: 16px;
+  background-color: rebeccapurple;
   color: white;
+  border-top-right-radius: 25px;
+  border-bottom-right-radius: 25px;
 }
 
 @media (max-width: 499px) {
