--- a/src/components/Hotel/Hotel.css
+++ b/src/components/Hotel/Hotel.css
@@ -27,7 +27,9 @@
   background-color: rebeccapurple;
   color: white;
   width: 25%;
-  border-radius: 25px;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
+  box-shadow: 1px 1px 1px black;
 }
 
 .Price {
@@ -44,8 +46,14 @@
   font-weight: lighter;
   font-size: 0.65rem;
 }
+
+.HotelCard h3 {
+  font-size: 1.3rem;
+  text-decoration: underline;
+}
+
 .HotelCard h4 {
-  margin: 0 0;
+  margin: 1px 0;
   padding: 0 0;
   font-size: 1rem;
 }
