--- a/src/containers/SideBar/sidebar.css
+++ b/src/containers/SideBar/sidebar.css
@@ -15,6 +15,19 @@
   border-bottom-right-radius: 25px;
 }
 
+.SideBarContent {
+  height: 500px;
+  border-left: white solid 1px;
+}
+
+.SideBarContent ul {
+  height: 100%;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+}
+
 @media (max-width: 499px) {
   .SideBar {
     display: none;
