--- a/src/components/Hotel/Hotel.css
+++ b/src/components/Hotel/Hotel.css
@@ -8,7 +8,6 @@
   flex-wrap: wrap;
   flex-grow: 1;
   width: 100%;
-  margin-top: 10px;
   margin-bottom: 5px;
   margin-right: 20px;
   height: 250px;
@@ -30,6 +29,7 @@
   border-top-left-radius: 25px;
   border-bottom-left-radius: 25px;
   box-shadow: 1px 1px 1px black;
+  text-align: center;
 }
 
 .Price {
@@ -66,7 +66,7 @@
 }
 
 .Facilities {
-  width: 20%;
+  width: 30%;
   border-right: 1px solid black;
   display: flex;
   justify-content: center;
