--- a/src/containers/SideBar/sidebar.css
+++ b/src/containers/SideBar/sidebar.css
@@ -1,10 +1,11 @@
 .SideBar {
-  display: flex;
+  position: relative;
+  maxdisplay: flex;
   flex-direction: column;
   overflow: scroll;
   align-items: center;
-  width: 650px;
-  max-width: 100%;
+  width: 60%;
+  max-width: 20%;
   height: 100%;
   padding: 32px 16px;
   box-sizing: border-box;
@@ -18,6 +19,7 @@
 .SideBarContent {
   height: 500px;
   border-left: white solid 1px;
+  padding-left: 1rem;
 }
 
 .SideBarContent ul {
